# fetchly

./: .gitignore  AGENTS.md  HANDOFF.md  README.md  pyproject.toml
.github/workflows/: release.yml
packaging/: build_linux.sh  build_macos.sh  build_windows.bat  fetchly.desktop  fetchly.icns  fetchly.spec  install_desktop_entry.sh  launch_cli.py  launch_gui.py
packaging/arch/: PKGBUILD
src/fetchly/: __init__.py  audit.py  cli.py  compare.py  config.py  engine.py  events.py  fetcher.py  frontier.py  jsfetch.py  mcp_server.py  models.py  parser.py  report.py  robots.py  session_io.py  sitemap.py  viz.py
src/fetchly/gui/: __init__.py  app.py  graphview.py  prefs.py  theme.py
tests/: conftest.py  test_audit.py  test_engine.py  test_export.py  test_extras.py  test_fetcher.py  test_frontier.py  test_gui_compare.py  test_gui_detail.py  test_gui_prefs.py  test_gui_theme.py  test_jsfetch.py  test_mcp.py  test_parser.py  test_robots_ua.py  test_tier1.py  test_tier2.py  test_viz.py
