[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fetchly"
version = "0.1.0"
description = "Cross-platform website crawler with CLI and GUI, producing CSV reports"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = ["pytest>=8"]
js = ["playwright>=1.40"]
build = ["pyinstaller>=6"]
mcp = ["mcp>=1.2"]

[project.scripts]
fetchly = "fetchly.cli:main"
fetchly-compare = "fetchly.compare:main"
fetchly-mcp = "fetchly.mcp_server:main"

[project.gui-scripts]
fetchly-gui = "fetchly.gui.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
fetchly = ["vendor/*", "gui/assets/*"]
